Infrastructure/environments/dev/DEV_IGW.tf
module "igw" {
  source      = "../../modules/IGW"
  vpc_id      = module.dev_vpc.vpc_id
  name        = "${var.common_name}-dev-igw"
  tags        = {
    Environment = "dev"
    Project     = "myapp"
  }
  
}

resource "aws_route" "public_default" {
  route_table_id         = module.public_subnet_1a.RT_ids
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = module.igw.igw_id
}

resource "aws_route" "public_default_2" {
  route_table_id         = module.public_subnet_1b.RT_ids
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = module.igw.igw_id
}
